# mkc-contracts

./: Makefile  brownie-config.yaml  pyproject.toml
contracts/: Metamutt.sol  MetamuttKennelClub.sol
scripts/: deploy.py  helpful_scripts.py
